Android NTP: only query TopSites if SuggestionsService has nothing in the cache

BUG=596857

Review URL: https://codereview.chromium.org/1850673002

Cr-Commit-Position: refs/heads/master@{#384260}

Former-commit-id: ba0dee760b7e0f02631ed33a8aa3dcf6dbcbeb8d